@@ -1,3 +1,4 @@
 [B]Version 1.1.131[/B]
 - naked.com - fix listing
 - chaturbate - fix online model search
+- americass - removed
